...
            value = note,
            onValueChange = onNoteChanged,
            modifier = Modifier
                .fillMaxWidth(),
            placeholder = {
                Text(
                    text = "Add a note...",
                    color = OnSurfaceTertiary
                )
            },
            textStyle = MaterialTheme.typography.bodyMedium.copy(color = OnSurface),
            singleLine = true,
            shape = RoundedCornerShape(12.dp),
...
